# Local_EACSF

./: CMakeLists.txt  Common.cmake  Dockerfile  Local_EACSF.cmake  README.md  SuperBuild.cmake
CMake/: Local_EACSFConfig.cmake.in
SuperBuild/: External_ITK.cmake  External_MriWatcher.cmake  External_Python3.cmake  External_Qt5.cmake  External_ShapePopulationViewer.cmake  External_SlicerExecutionModel.cmake  External_VTK.cmake  External_VTK_build_step.cmake.in  External_VXL.cmake
src/: CMakeLists.txt
src/Code/: CMakeLists.txt
src/Code/AddScalarstoPolyData/: AddScalarstoPolyData.cxx  AddScalarstoPolyData.xml  CMakeLists.txt
src/Code/ComputeAverageMesh/: CMakeLists.txt  ComputeAverageMesh.cxx  ComputeAverageMesh.xml
src/Code/ComputeCSFVolume/: CMakeLists.txt  ComputeCSFVolume.cxx  ComputeCSFVolume.xml
src/Code/CreateOuterImage/: CMakeLists.txt  CreateOuterImage.cxx  CreateOuterImage.xml
src/Code/CreateOuterSurface/: CMakeLists.txt  CreateOuterSurface.cxx  CreateOuterSurface.xml
src/Code/EACSFKlaplace/: CMakeLists.txt  kvolume.cpp
src/Code/EditPolyData/: CMakeLists.txt  EditPolyData.cxx  EditPolyData.xml
src/Code/EstimateCortexStreamlinesDensity/: CMakeLists.txt  EstimateCortexStreamlinesDensity.cxx  EstimateCortexStreamlinesDensity.xml
src/Code/FitPlane/: CMakeLists.txt  FitPlane.cxx  FitPlane.xml  best_plane_fit.cxx  best_plane_fit.h
src/Code/HeatKernelSmoothing/: CMakeLists.txt  HeatKernelSmoothing.cxx  HeatKernelSmoothing.xml
src/Code/ROImean/: CMakeLists.txt  ROImean.cxx  ROImean.xml
src/Code/klaplace/: CMakeLists.txt  klaplace.cpp  klaplace.cxx  kvolume.cpp
src/app/: CMakeLists.txt  Local_EACSF.cxx  Local_EACSF.xml  Local_EACSF_Resources.qrc  addWidget.cpp  addWidget.h  csfscripts.cpp  csfscripts.h  csfwindow.cpp  csfwindow.h  csfwindow.ui  csfwindow.ui.autosave  default_config.json  extexecutableswidget.cxx  extexecutableswidget.h  main_script.py  model.cpp  model.h  process_left_hemisphere.py  process_right_hemisphere.py  slurm-job
