# This is the root ITK CMakeLists file.
cmake_minimum_required(VERSION 2.8.7)
# specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
if(COMMAND CMAKE_POLICY)
  cmake_policy(SET CMP0003 NEW)
endif()


SET(APP_NAME CreateOuterImage)
set_property(SOURCE CreateOuterImageCLP.h PROPERTY SKIP_AUTOMOC ON)

find_package(SlicerExecutionModel)
include(${SlicerExecutionModel_USE_FILE})

find_package(ITK REQUIRED)
include(${ITK_USE_FILE})

find_package(VTK REQUIRED)
include(${VTK_USE_FILE})


SET(${APP_NAME}_LIBRARIES ${ITK_LIBRARIES} ${VTK_LIBRARIES})


SEMMacroBuildCLI(
	NAME ${APP_NAME}
	EXECUTABLE_ONLY
	ADDITIONAL_SRCS ${${APP_NAME}_ADDITIONAL_SRCS}
	TARGET_LIBRARIES ${${APP_NAME}_LIBRARIES}
	RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
	LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
	ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
	INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
	INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
	INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}

)




