cmake_minimum_required(VERSION 2.8.7)
cmake_policy(SET CMP0071  NEW)
#specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

SET(APP_NAME HeatKernelSmoothing)
set_property(SOURCE HeatKernelSmoothingCLP.h PROPERTY SKIP_AUTOMOC ON)

find_package(SlicerExecutionModel)
include(${SlicerExecutionModel_USE_FILE})

find_package(Qt5 COMPONENTS X11Extras REQUIRED)

find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
SET(${APP_NAME}_LIBRARIES ${VTK_LIBRARIES} ${QT_LIBRARIES})



SEMMacroBuildCLI(
	NAME ${APP_NAME}
	EXECUTABLE_ONLY
	ADDITIONAL_SRCS ${${APP_NAME}_ADDITIONAL_SRCS}
	TARGET_LIBRARIES ${${APP_NAME}_LIBRARIES}
	RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
	LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
	ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
	INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
	INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
	INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}

)

















